feat: merge 2 database into 1

--- a/.env.example
+++ b/.env.example
@@ -35,12 +35,14 @@ LOG_LEVEL=debug
 # Example: docker run --rm ghcr.io/dyrector-io/dyrectorio/cli/dyo:latest generate crux encryption-key
 ENCRYPTION_SECRET_KEY=Random_Generate_Key
 
-# # Database passwords
+# # Database passwords and infos
 
 # This value is the password to crux's database
 CRUX_POSTGRES_PASSWORD=Random_Generated_String
 # This value is the password to Kratos' database
 KRATOS_POSTGRES_PASSWORD=Random_Generated_String
+# This value is the password to root user
+POSTGRES_ROOT_PASSWORD=Random_Generated_String
 
 # # External URL of the site https://example.com(:port if not 443)
 
