--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -10,6 +10,9 @@ KRATOS_ADMIN_URL=http://localhost:4434
 DATABASE_URL="postgresql://username:password@localhost:5432/crux?schema=public"
 CRUX_UI_URL=http://localhost:8000
 
+
+CRUX_POSTGRES_PASSWORD="Random_Generated_String"
+
 # # Port settings
 
 # Agent gRPC API port
@@ -71,7 +74,6 @@ AGENT_CALLBACK_TIMEOUT=5000
 # MAX_GRPC_RECEIVE_MESSAGE_LENGTH=4194304
 
 # GRPC Timeout values and their respective defaults
-# 
 # GRPC_KEEPALIVE_TIMEOUT_MS=5000
 # GRPC_KEEPALIVE_TIME_MS=30000
 # HTTP2_MINPINGINTERVAL_MS=30000
