feat: remove unused custom variables

--- a/.env.example
+++ b/.env.example
@@ -35,7 +35,7 @@ LOG_LEVEL=debug
 # Example: docker run --rm ghcr.io/dyrector-io/dyrectorio/cli/dyo:latest generate crux encryption-key
 ENCRYPTION_SECRET_KEY=Random_Generate_Key
 
-# # Database passwords and infos
+# # Database passwords
 
 # This value is the password to crux's database
 CRUX_POSTGRES_PASSWORD=Random_Generated_String
